force-app/main/default/objects/Object1__c/Object1__c.object-meta.xml
<CustomObject>
    <label>Object 1</label>
    <nameField>
        <label>Just For Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>