force-app/main/default/objects/Object1__c/fields/Object_Address__c.field-meta.xml
<CustomField>
    <fullName>Object_Address__c</fullName>
    <label>Object Address</label>
    <type>TextArea</type>
</CustomField>