force-app/main/default/objects/Object1__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <displayFormat>ID-{0000000}</displayFormat>
    <label>Object Id</label>
    <type>AutoNumber</type>
</CustomField>