force-app/main/default/objects/Object1__c/fields/Object_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Object_Phone_No__c</fullName>
    <label>Object Phone No</label>
    <type>Phone</type>
</CustomField>