force-app/main/default/objects/Object1__c/fields/Object_Salary__c.field-meta.xml
<CustomField>
    <fullName>Object_Salary__c</fullName>
    <label>Object Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>