force-app/main/default/objects/Object1__c/fields/self__c.field-meta.xml
<CustomField>
    <fullName>self__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object 1</label>
    <referenceTo>Object1__c</referenceTo>
    <relationshipLabel>Object 1</relationshipLabel>
    <relationshipName>Object_1</relationshipName>
    <type>Lookup</type>
</CustomField>