force-app/main/default/objects/Object1__c/validationRules/For_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER( Object_Phone_No__c )</errorConditionFormula>
    <errorDisplayField>Object_Phone_No__c</errorDisplayField>
    <errorMessage>Please Enter Valid Phone Number</errorMessage>
</ValidationRule>